# ruefi

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  build.rs
.cargo/: config.toml
src/: asteroid.rs  blitter.rs  main.rs  projectile.rs  rand.rs  ship.rs  uefi_alloc.rs
