[package]
name = "uefi-experiments"
version = "0.1.0"
repository = "git@github.com:sunsided/uefi-experiments.git"
license = "EUPL-1.2"
edition = "2024"
keywords = ["uefi", "firmware", "boot", "rust", "experiments"]
categories = ["embedded", "os", "development-tools", "hardware-support"]
publish = false

[dependencies]
uefi = { version = "0.35", features = ["panic_handler"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
