[package]
name = "ruefi"
version = "0.2.0"
repository = "git@github.com:sunsided/ruefi.git"
license = "EUPL-1.2"
edition = "2024"
keywords = ["uefi", "firmware", "boot", "rust", "experiments"]
categories = ["embedded", "os", "development-tools", "hardware-support"]
publish = false

[dependencies]
uefi = { version = "0.35", features = ["panic_handler"] }
libm = "0.2"

[build-dependencies]
image = { version = "0.25.8", default-features = false, features = ["png"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
